api-layer/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-layer
  labels:
    app: api-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-layer
  template:
    metadata:
      labels:
        app: api-layer
    spec:
      containers:
        - name: api-layer
          image: api-layer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
